added featured cards

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
         <!-- Featured Collection Section -->
         <section id="featured" class="featured-section">
             <div class="container">
-                <h2>Featured Collection</h2>
+                <h2>featured collection</h2>
                 <div class="featured-grid">
-                    <!-- Featured products will be added dynamically with JavaScript -->
+                    <!-- Featured card will be inserted here -->
+                    <div id="featured-card-container"></div>
                 </div>
                 <div class="view-more">
                     <a href="pages/shop.html" class="btn outline-btn">View All Products</a>
@@ -127,5 +128,6 @@ Built in Australia. Worn everywhere.</p>
 
     <!-- <script src="js/main.js"></script> -->
     <script src="js/components.js"></script>
+    <script src="js/featured-card.js"></script>
 </body>
 </html> 
