--- a/index.html
+++ b/index.html
@@ -70,6 +70,17 @@
             </div>
         </section>
 
+        <!-- Video Showcase Section -->
+        <section id="video-showcase" class="video-showcase-section">
+            <div class="container">
+                <div class="video-showcase-content">
+                    <video autoplay loop muted playsinline preload="auto" volume="0">
+                        <source src="img/yesh2.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </section>
+
         <footer>
             <div class="footer-divider"></div>
             <div class="newsletter-section">
