finished landing page

--- a/index.html
+++ b/index.html
@@ -70,14 +70,18 @@
             </div>
         </section>
 
+        <div class="footer-divider"></div>
         <!-- Video Showcase Section -->
         <section id="video-showcase" class="video-showcase-section">
             <div class="container">
+                <h2>watch the latest drop</h2>
                 <div class="video-showcase-content">
                     <video autoplay loop muted playsinline preload="auto" volume="0">
                         <source src="img/yesh2.mp4" type="video/mp4">
                     </video>
                 </div>
+                <p>a glimpse into out a/w collection</p>
+                <p>now live</p>
             </div>
         </section>
 
