--- a/pages/shop.html
+++ b/pages/shop.html
@@ -1,1 +1,29 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>unComfort | Shop</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/components.css">
+</head>
+
+<body>
+    <div id="navbar-container"></div>
+    <div id="shop-sidebar"></div>
+    <main class="shop-page-main-content">
+        <section id="shop" class="shop-section">
+            <div class="container">
+                <div class="product-grid" id="product-card-container"></div>
+            </div>
+        </section>
+    </main>
+
+    <div id="footer-container"></div>
+
+    <script src="../js/components.js"></script>
+
+</body>
+
+</html>
