--- a/pages/shop.html
+++ b/pages/shop.html
@@ -20,9 +20,27 @@
         </section>
     </main>
 
-    <div id="footer-container"></div>
-
+    <footer>
+        <div class="footer-divider"></div>
+        <div class="footer-main">
+            <div class="footer-branding">
+                <div class="logo">
+                    <a href="/"><span class="un">un</span><span class="comfort">comfort.</span></a>
+                </div>
+                </div>
+                <div class="footer-links-bottom">
+                    <a href="#">privacy policy</a>
+                    <a href="#">refund policy</a>
+                    <a href="#">shipping policy</a>
+                    <a href="#">terms of service</a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 unComfort. All rights reserved.</p>
+            </div>
+    </footer>
     <script src="../js/components.js"></script>
+    <script src="../js/shop.js"></script>
 
 </body>
 
