--- a/pages/product.html
+++ b/pages/product.html
@@ -1,1 +1,41 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>unComfort | Products</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/components.css">
+</head>
+
+<body>
+    <div id="navbar-container"></div>
+    <main class="product-page-main-content">
+        <section id="product" class="product-section">
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-divider"></div>
+        <div class="footer-main">
+            <div class="footer-branding">
+                <div class="logo">
+                    <a href="/"><span class="un">un</span><span class="comfort">comfort.</span></a>
+                </div>
+            </div>
+            <div class="footer-links-bottom">
+                <a href="#">privacy policy</a>
+                <a href="#">refund policy</a>
+                <a href="#">shipping policy</a>
+                <a href="#">terms of service</a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 unComfort. All rights reserved.</p>
+        </div>
+    </footer>
+    <script src="../js/components.js"></script>
+    <script src="../js/shop.js"></script>
+    <script src="../js/product.js"></script>
+</body>
+</html>
