dedicated product data file

--- a/pages/product.html
+++ b/pages/product.html
@@ -35,6 +35,7 @@
         </div>
     </footer>
     <script src="../js/components.js"></script>
+    <script src="../js/productsData.js"></script>
     <script src="../js/shop.js"></script>
     <script src="../js/product.js"></script>
 </body>
