--- a/pages/shop.html
+++ b/pages/shop.html
@@ -40,6 +40,7 @@
             </div>
     </footer>
     <script src="../js/components.js"></script>
+    <script src="../js/productsData.js"></script>
     <script src="../js/shop.js"></script>
 
 </body>
