lookbook working mostly

--- a/pages/lookbook.html
+++ b/pages/lookbook.html
@@ -1,1 +1,75 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>unComfort | Lookbook</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/components.css">
+</head>
+<body>
+    <div id="navbar-container"></div>
+    <main class="lookbook-page-main-content">
+        <section id="lookbook" class="lookbook-section">
+            <!-- Sidebar Thumbnails -->
+            <aside>
+                <img src="../img/lookbook_1.png" alt="Lookbook 1">
+                <img src="../img/lookbook_2.png" alt="Lookbook 2">
+                <img src="../img/lookbook_3.png" alt="Lookbook 3">
+                <img src="../img/lookbook_4.png" alt="Lookbook 4">
+            </aside>
+
+            <!-- Main Content -->
+            <main>
+                <!-- Collection/Product/Date Info -->
+                <div class="lookbook-collection-info">
+                    <div>
+                        <div style="letter-spacing: 3px;">COLLECTION</div>
+                        <div style="margin-top: 6px;">fall</div>
+                    </div>
+                    <div>
+                        <div style="letter-spacing: 3px;">PRODUCTS</div>
+                        <div style="margin-top: 6px;">8002<br>8006<br>8004<br>8011</div>
+                    </div>
+                    <div>
+                        <div style="letter-spacing: 3px;">DATE</div>
+                        <div style="margin-top: 6px;">feb 2025</div>
+                    </div>
+                </div>
+                <!-- Main Image -->
+                <div class="lookbook-image-container">
+                    <img src="../img/lookbook_1.png" alt="1">
+                    <img src="../img/lookbook_2.png" alt="2">
+                    <img src="../img/lookbook_3.png" alt="3">
+                    <img src="../img/lookbook_4.png" alt="4">
+                    <img src="../img/lookbook_5.png" alt="5">
+                </div>
+                <!-- Bottom Color Bar (decorative) -->
+                <div style="width: 100%; height: 24px; background: url('../img/lookbook_bar.png') repeat-x; background-size: cover;"></div>
+            </main>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-divider"></div>
+        <div class="footer-main">
+            <div class="footer-branding">
+                <div class="logo">
+                    <a href="/"><span class="un">un</span><span class="comfort">comfort.</span></a>
+                </div>
+            </div>
+            <div class="footer-links-bottom">
+                <a href="#">privacy policy</a>
+                <a href="#">refund policy</a>
+                <a href="#">shipping policy</a>
+                <a href="#">terms of service</a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 unComfort. All rights reserved.</p>
+        </div>
+    </footer>
+    <script src="../js/components.js"></script>
+    <script src="../js/lookbook.js"></script>
+</body>
+</html>
