--- a/pages/lookbook.html
+++ b/pages/lookbook.html
@@ -13,10 +13,11 @@
         <section id="lookbook" class="lookbook-section">
             <!-- Sidebar Thumbnails -->
             <aside>
-                <img src="../img/lookbook_1.png" alt="Lookbook 1">
+                <img class="active" src="../img/lookbook_1.png" alt="Lookbook 1">
                 <img src="../img/lookbook_2.png" alt="Lookbook 2">
                 <img src="../img/lookbook_3.png" alt="Lookbook 3">
                 <img src="../img/lookbook_4.png" alt="Lookbook 4">
+                <img src="../img/lookbook_5.png" alt="Lookbook 5">
             </aside>
 
             <!-- Main Content -->
