--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
     <!-- Navbar component will be inserted here -->
     <div id="navbar-container"></div>
+    
+    <!-- Cart Sidebar -->
+    <div id="cart-sidebar" class="cart-sidebar">
+    </div>
 
     <main>
         <!-- Hero Section with Video Background -->
@@ -121,10 +125,9 @@
             </div>
         </footer>
 
-
         <!-- <script src="js/main.js"></script> -->
         <script src="js/components.js"></script>
         <script src="js/featured-card.js"></script>
-</body>
-
+        <script src="js/cart.js"></script>
+    </body>
 </html>
