--- a/pages/lookbook.html
+++ b/pages/lookbook.html
@@ -6,6 +6,7 @@
     <title>unComfort | Lookbook</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/components.css">
+    <link rel="stylesheet" href="../css/cart.css">
 </head>
 <body>
     <div id="navbar-container"></div>
@@ -72,5 +73,6 @@
     </footer>
     <script src="../js/components.js"></script>
     <script src="../js/lookbook.js"></script>
+    <script src="../js/cart.js"></script>
 </body>
 </html>
