--- a/pages/shop.html
+++ b/pages/shop.html
@@ -7,6 +7,7 @@
     <title>unComfort | Shop</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/components.css">
+    <link rel="stylesheet" href="../css/cart.css">
 </head>
 
 <body>
@@ -42,7 +43,7 @@
     <script src="../js/components.js"></script>
     <script src="../js/productsData.js"></script>
     <script src="../js/shop.js"></script>
-
+    <script src="../js/cart.js"></script>
 </body>
 
 </html>
