--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>unComfort | Home</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/cart.css">
 </head>
 
 <body>
