--- a/pages/product.html
+++ b/pages/product.html
@@ -6,6 +6,7 @@
     <title>unComfort | Products</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/components.css">
+    <link rel="stylesheet" href="../css/cart.css">
 </head>
 
 <body>
@@ -37,6 +38,7 @@
     <script src="../js/components.js"></script>
     <script src="../js/productsData.js"></script>
     <script src="../js/shop.js"></script>
+    <script src="../js/cart.js"></script>
     <script src="../js/product.js"></script>
 </body>
 </html>
