currency select working with conversions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/cart.css">
+    <link rel="stylesheet" href="css/currency.css">
 </head>
 
 <body>
@@ -130,5 +131,6 @@
         <script src="js/components.js"></script>
         <script src="js/featured-card.js"></script>
         <script src="js/cart.js"></script>
+        <script src="js/currency.js"></script>
     </body>
 </html>
