--- a/pages/shop.html
+++ b/pages/shop.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/components.css">
     <link rel="stylesheet" href="../css/cart.css">
+    <link rel="stylesheet" href="../css/currency.css">
 </head>
 
 <body>
@@ -44,6 +45,7 @@
     <script src="../js/productsData.js"></script>
     <script src="../js/shop.js"></script>
     <script src="../js/cart.js"></script>
+    <script src="../js/currency.js"></script>
 </body>
 
 </html>
