--- a/pages/lookbook.html
+++ b/pages/lookbook.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/components.css">
     <link rel="stylesheet" href="../css/cart.css">
+    <link rel="stylesheet" href="../css/currency.css">
 </head>
 <body>
     <div id="navbar-container"></div>
@@ -74,5 +75,6 @@
     <script src="../js/components.js"></script>
     <script src="../js/lookbook.js"></script>
     <script src="../js/cart.js"></script>
+    <script src="../js/currency.js"></script>
 </body>
 </html>
