--- a/pages/product.html
+++ b/pages/product.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/components.css">
     <link rel="stylesheet" href="../css/cart.css">
+    <link rel="stylesheet" href="../css/currency.css">
 </head>
 
 <body>
@@ -40,5 +41,6 @@
     <script src="../js/shop.js"></script>
     <script src="../js/cart.js"></script>
     <script src="../js/product.js"></script>
+    <script src="../js/currency.js"></script>
 </body>
 </html>
