finished policies, added arrow

--- a/index.html
+++ b/index.html
@@ -43,9 +43,14 @@
         <!-- Hero Section with Video Background -->
         <section id="home" class="hero fullscreen">
             <div class="hero-content">
-
+                <div class="down-arrow-3q">
+                    <svg width="3vw" height="3vw" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M54.5624 41.6876C55.7014 42.8266 55.7014 44.6733 54.5624 45.8124L37.0624 63.3124C35.9234 64.4514 34.0766 64.4514 32.9376 63.3124L15.4376 45.8124C14.2986 44.6733 14.2986 42.8266 15.4376 41.6876C16.5766 40.5486 18.4234 40.5486 19.5624 41.6876L32.0833 54.2085L32.0833 8.74998C32.0833 7.13915 33.3892 5.83331 35 5.83331C36.6108 5.83331 37.9167 7.13915 37.9167 8.74998L37.9167 54.2085L50.4376 41.6876C51.5766 40.5486 53.4234 40.5486 54.5624 41.6876Z" fill="white"/>
+                    </svg>
+                </div>
             </div>
         </section>
+
 
         <!-- Featured Collection Section -->
         <section id="featured" class="featured-section">
@@ -116,10 +121,10 @@
                     </div>
                 </div>
                 <div class="footer-links-bottom">
-                    <a href="#">privacy policy</a>
-                    <a href="#">refund policy</a>
-                    <a href="#">shipping policy</a>
-                    <a href="#">terms of service</a>
+                    <a href="/pages/privacy.html">privacy policy</a>
+                    <a href="/pages/refund.html">refund policy</a>
+                    <a href="/pages/shipping.html">shipping policy</a>
+                    <a href="/pages/tos.html">terms of service</a>
                 </div>
             </div>
             <div class="footer-bottom">
