--- a/pages/login.html
+++ b/pages/login.html
@@ -1,1 +1,31 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>unComfort | Login</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/components.css">
+    <link rel="stylesheet" href="../css/cart.css">
+    <link rel="stylesheet" href="../css/currency.css">
+    <link rel="stylesheet" href="../css/login.css">
+</head>
+<body>
+    <div id="navbar-container"></div>
+    <main>
+        <h1 style="text-align: center; margin-top: 25vh;">LOGIN</h1>
+        <form style="display: flex; flex-direction: column; align-items: center;">
+            <div class="credentials">
+                <input type="email" placeholder="email_" class="email">
+                <input type="password" placeholder="password_" class="password">
+            </div>
+            <button type="submit" class="login-btn sign-in" onclick="login()">sign in</button>
+            <button type="submit" class="login-btn sign-up" onclick="signUp()">sign up</button>
+        </form>
+    </main>
+    <script src="../js/components.js"></script>
+    <script src="../js/cart.js"></script>
+    <script src="../js/currency.js"></script>
+    <script src="../js/login.js"></script>
+</body>
+</html> 
