--- a/pages/shop.html
+++ b/pages/shop.html
@@ -31,10 +31,10 @@
                 </div>
                 </div>
                 <div class="footer-links-bottom">
-                    <a href="#">privacy policy</a>
-                    <a href="#">refund policy</a>
-                    <a href="#">shipping policy</a>
-                    <a href="#">terms of service</a>
+                    <a href="/pages/privacy.html">privacy policy</a>
+                    <a href="/pages/refund.html">refund policy</a>
+                    <a href="/pages/shipping.html">shipping policy</a>
+                    <a href="/pages/tos.html">terms of service</a>
                 </div>
             </div>
             <div class="footer-bottom">
