phone/tablet view working

--- a/pages/tos.html
+++ b/pages/tos.html
@@ -43,7 +43,7 @@
         <br>
         <p style="font-weight: bold;">6. Governing Law</p>
         <br>
-        <p>These terms are governed by the laws of [Your Country or State].</p>
+        <p>These terms are governed by the laws of Queensland, Australia.</p>
     </main>
     <footer>
         <div class="footer-divider"></div>
