changed file paths

--- a/pages/shipping.html
+++ b/pages/shipping.html
@@ -49,22 +49,22 @@
         <div class="footer-main">
             <div class="footer-branding">
                 <div class="logo">
-                    <a href="/"><span class="un">un</span><span class="comfort">comfort.</span></a>
+                    <a href="/unComfort/"><span class="un">un</span><span class="comfort">comfort.</span></a>
                 </div>
             </div>
             <div class="footer-links-bottom">
-                <a href="/pages/privacy.html">privacy policy</a>
-                <a href="/pages/refund.html">refund policy</a>
-                <a href="/pages/shipping.html">shipping policy</a>
-                <a href="/pages/tos.html">terms of service</a>
+                <a href="/unComfort/pages/privacy.html">privacy policy</a>
+                <a href="/unComfort/pages/refund.html">refund policy</a>
+                <a href="/unComfort/pages/shipping.html">shipping policy</a>
+                <a href="/unComfort/pages/tos.html">terms of service</a>
             </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2025 unComfort. All rights reserved.</p>
         </div>
     </footer>
-    <script src="../js/components.js"></script>
-    <script src="../js/cart.js"></script>
-    <script src="../js/currency.js"></script>
+    <script src="/unComfort/js/components.js"></script>
+    <script src="/unComfort/js/cart.js"></script>
+    <script src="/unComfort/js/currency.js"></script>
 </body>
 </html>
