--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Full screen video background with overlay -->
     <div class="video-container">
         <video autoplay loop muted playsinline>
-            <source src="img/yesh1.mp4" type="video/mp4">
+            <source src="/unComfort/img/yesh1.mp4" type="video/mp4">
         </video>
         <div class="overlay"></div>
     </div>
@@ -88,7 +88,7 @@
                 <h2>watch the latest drop</h2>
                 <div class="video-showcase-content">
                     <video autoplay loop muted playsinline preload="auto" volume="0">
-                        <source src="img/yesh2.mp4" type="video/mp4">
+                        <source src="/unComfort/img/yesh2.mp4" type="video/mp4">
                     </video>
                 </div>
                 <p>a glimpse into out a/w collection</p>
@@ -117,14 +117,14 @@
             <div class="footer-main">
                 <div class="footer-branding">
                     <div class="logo">
-                        <a href="/"><span class="un">un</span><span class="comfort">comfort.</span></a>
+                        <a href="/unComfort/"><span class="un">un</span><span class="comfort">comfort.</span></a>
                     </div>
                 </div>
                 <div class="footer-links-bottom">
-                    <a href="/pages/privacy.html">privacy policy</a>
-                    <a href="/pages/refund.html">refund policy</a>
-                    <a href="/pages/shipping.html">shipping policy</a>
-                    <a href="/pages/tos.html">terms of service</a>
+                    <a href="/unComfort/pages/privacy.html">privacy policy</a>
+                    <a href="/unComfort/pages/refund.html">refund policy</a>
+                    <a href="/unComfort/pages/shipping.html">shipping policy</a>
+                    <a href="/unComfort/pages/tos.html">terms of service</a>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -132,10 +132,10 @@
             </div>
         </footer>
 
-        <!-- <script src="js/main.js"></script> -->
-        <script src="js/components.js"></script>
-        <script src="js/featured-card.js"></script>
-        <script src="js/cart.js"></script>
-        <script src="js/currency.js"></script>
+        <!-- <script src="/unComfort/js/main.js"></script> -->
+        <script src="/unComfort/js/components.js"></script>
+        <script src="/unComfort/js/featured-card.js"></script>
+        <script src="/unComfort/js/cart.js"></script>
+        <script src="/unComfort/js/currency.js"></script>
     </body>
 </html>
